--- a/report.tex
+++ b/report.tex
@@ -148,20 +148,75 @@ less_equal xs ys | head xs <= head ys = less_equal (tail xs) (tail ys)
 %
 For my select evens function, I set the base case to return an empty list. The recursive function has 3 cases. In the first case, provided the given list has a length of 2 or greater, the head of the list xs is taken as the first element of the list. This is the second element of the given list because x is the head of list x:xs. After that the tail of the list xs is put back into select evens, which removes the first two elements from the list x:xs. In the second case, if the length of the list is 1, it also returns an empty list. Otherwise, it just returns the given list.
 
+\begin{lstlisting}
+select_evens [1,2,3,4,5] =
+	length [1,2,3,4,5] >= 2 = 2 : (select_evens [3,4,5]) =
+	length [3,4,5] >= 2 = 2 : 4 : (select_evens [5]) =
+	length [5] == 1 = 2 : 4 : [] =
+	[2,4]
+\end{lstlisting}
+
 \medskip\noindent
 My select odds function is similar to my select evens function, with a base case of an empty list. If the length of the given list is greater than or equal to 1, the head of list x:xs, which is the value x, is taken as the first element of the list. The tail is then passed back into select odds for the same reasons as the select evens function. If the length is too short, it returns the given list.
+
+\begin{lstlisting}
+select_odds [1,2,3,4,5] =
+	length [1,2,3,4,5] >= 1 = 1 : (select_odds [3,4,5]) =
+	length [3,4,5] >= 1 = 1 : 3 : (select_odds [5]) =
+	length [5] >= 1 = 1 : 3 : 5 : [] =
+	[1,3,5]
+\end{lstlisting}
 
 \medskip\noindent
 The member function returns a base case of False given any input with an empty list. When given a list, as long as the list is greater than or equal to 1, it checks to see if the given input value matches the head of the given list. If it matches, it returns true, otherwise, it passes the tail of the list back into the member function.
 
+\begin{lstlisting}
+member 3 [1,2,3,4,5] =
+	3 != 1 = member 3 [2,3,4,5] =
+	3 != 2 = member 3 [3,4,5] =
+	3 == 3 = True
+\end{lstlisting}
+
 \medskip\noindent
 When given an empty set of lists, the append function returns an empty list. If only one of the given lists is empty, it returns the non-empty list. When given two non-empty lists, the head of the first list is taken as the first element of the list. It is attached to the resulting list from appending the tail of the first list with the whole of the second list. Eventually, this empties out the first list, which will cause the entirety of the second list to be appended onto the elements of the first list.
+
+\begin{lstlisting}
+append [1,2,3] [4,5,6] =
+	1 : (append [2,3] [4,5,6]) =
+	1 : 2 : (append [3] [4,5,6]) =
+	1 : 2 : 3 : (append [] [4,5,6]) =
+	1 : 2 : 3 : [4,5,6] =
+	[1,2,3,4,5,6]
+\end{lstlisting}
 
 \medskip\noindent
 The base case of the revert function returns an empty list when given an empty list. When given a non-empty list, the revert function uses the previous append function to create a new list where the head of the given list is placed at the back. The remaining list elements are passed back into the revert function, which will result in a list where the elements are in reversed order.
 
+\begin{lstlisting}
+revert [1,2,3,4,5] =
+	(append (revert [2,3,4,5])) : 1 : [] =
+	(append (revert [2,3,4,5])) : [1] =
+	(append (revert [3,4,5])) : 2 : [] : [1] =
+	(append (revert [3,4,5])) : [2] : [1] =
+	(append (revert [4,5])) : 3 : [] : [2] : [1] =
+	(append (revert [4,5])) : [3] : [2] : [1] =
+	(append (revert [5])) : 4 : [] : [3] : [2] : [1] =
+	(append (revert [5])) : [4] : [3] : [2] : [1] =
+	(append (revert [])) : 5 : [] : [4] : [3] : [2] : [1] =
+	(append (revert [])) : [5] : [4] : [3] : [2] : [1] =
+	[] : [5] : [4] : [3] : [2] : [1] =
+	[5,4,3,2,1]
+\end{lstlisting}
+
 \medskip\noindent
 When the two lists given to the less equal function are both empty, the function returns a true. If the first list is non-empty but the second list is, the function returns false. If the second list is non-empty but the first one is, the function returns true. If both lists are non-empty lists, the head of both lists is compared to one another. If the head of the first list is less than or equal to the second list, the function continues by passing on the tails of both lists back into itself. Otherwise, if the head of the first list is greater than the head of the second list, the function stops and returns a false.
+
+\begin{lstlisting}
+less_equal [1,1,4] [1,2,3] =
+	1 <= 1 = less_equal [1,4] [2,3] =
+	1 <= 2 = less_equal [4] [3] =
+	4 !<= 3 = False
+\end{lstlisting}
 
 \section{Project}
 
