--- a/report.tex
+++ b/report.tex
@@ -150,9 +150,9 @@ For my select evens function, I set the base case to return an empty list. The r
 
 \begin{lstlisting}
 select_evens [1,2,3,4,5] =
-	length [1,2,3,4,5] >= 2 = 2 : (select_evens [3,4,5]) =
-	length [3,4,5] >= 2 = 2 : 4 : (select_evens [5]) =
-	length [5] == 1 = 2 : 4 : [] =
+	2 : (select_evens [3,4,5]) =
+	2 : 4 : (select_evens [5]) =
+	2 : 4 : [] =
 	[2,4]
 \end{lstlisting}
 %
@@ -160,9 +160,9 @@ My select odds function is similar to my select evens function, with a base case
 
 \begin{lstlisting}
 select_odds [1,2,3,4,5] =
-	length [1,2,3,4,5] >= 1 = 1 : (select_odds [3,4,5]) =
-	length [3,4,5] >= 1 = 1 : 3 : (select_odds [5]) =
-	length [5] >= 1 = 1 : 3 : 5 : [] =
+	1 : (select_odds [3,4,5]) =
+	1 : 3 : (select_odds [5]) =
+	1 : 3 : 5 : [] =
 	[1,3,5]
 \end{lstlisting}
 %
@@ -170,9 +170,9 @@ The member function returns a base case of False given any input with an empty l
 
 \begin{lstlisting}
 member 3 [1,2,3,4,5] =
-	3 != 1 = member 3 [2,3,4,5] =
-	3 != 2 = member 3 [3,4,5] =
-	3 == 3 = True
+	member 3 [2,3,4,5] =
+	member 3 [3,4,5] =
+	True
 \end{lstlisting}
 %
 When given an empty set of lists, the append function returns an empty list. If only one of the given lists is empty, it returns the non-empty list. When given two non-empty lists, the head of the first list is taken as the first element of the list. It is attached to the resulting list from appending the tail of the first list with the whole of the second list. Eventually, this empties out the first list, which will cause the entirety of the second list to be appended onto the elements of the first list.
@@ -208,9 +208,9 @@ When the two lists given to the less equal function are both empty, the function
 
 \begin{lstlisting}
 less_equal [1,1,4] [1,2,3] =
-	1 <= 1 = less_equal [1,4] [2,3] =
-	1 <= 2 = less_equal [4] [3] =
-	4 !<= 3 = False
+	less_equal [1,4] [2,3] =
+	less_equal [4] [3] =
+	False
 \end{lstlisting}
 
 \subsection{Week 3}
@@ -282,6 +282,57 @@ The word hanoi appears 31 times in the computation.
 & = {\rm move}(x)(y)\\
 & = {\rm hanoi} (n) ({\rm other}(x)(y)) (y)
 \end{align*}
+
+\subsection{Week 3}
+\begin{lstlisting}
+       Plus
+    /        \
+Integer    Integer
+  |            |
+  2            1
+\end{lstlisting}
+
+\begin{lstlisting}
+       Plus
+    /        \
+Integer    Multiply
+  |         /    \
+  1         2    3
+\end{lstlisting}
+
+\begin{lstlisting}
+       Plus
+    /        \
+Integer    Parentheses
+  |             |
+  1         Multiply
+              /   \
+        Integer   Integer
+             |     |
+             2     3
+\end{lstlisting}
+
+\begin{lstlisting}
+               Multiply
+             /           \
+           Plus       Integer
+         /      \         |
+  Integer    Integer      3
+     |           |
+     1           2
+\end{lstlisting}
+
+\begin{lstlisting}
+                             Plus
+                   /                     \
+               Plus                       Plus
+             /      \                   /      \
+     Integer    Multiply         Multiply       Integer
+          |      /     \          /     \          |
+          1 Integer Integer Integer Integer        6
+               |         |       |         |
+               2         3       4         5
+\end{lstlisting}
 
 \section{Project}
 
