--- a/report.tex
+++ b/report.tex
@@ -298,6 +298,47 @@ The word hanoi appears 31 times in the computation.
 \includegraphics {hw4no5}
 
 \subsection{Week 5}
+\begin{lstlisting}
+x
+\end{lstlisting}
+%
+\includegraphics {hw5no1}
+
+\begin{lstlisting}
+x y
+\end{lstlisting}
+%
+\includegraphics {hw5no2}
+
+\begin{lstlisting}
+x y z
+\end{lstlisting}
+%
+\includegraphics {hw5no3}
+
+\begin{lstlisting}
+\ x . x
+\end{lstlisting}
+%
+\includegraphics {hw5no4}
+
+\begin{lstlisting}
+\ x . x x
+\end{lstlisting}
+%
+\includegraphics {hw5no5}
+
+\begin{lstlisting}
+\ x . \ y . x y (\ x . x) z
+\end{lstlisting}
+%
+\includegraphics {hw5no6}
+
+\begin{lstlisting}
+\ x . \ y . x y z a b c
+\end{lstlisting}
+%
+\includegraphics {hw5no7}
 
 \section{Project}
 
