--- a/report.tex
+++ b/report.tex
@@ -442,6 +442,42 @@ evalCBN (EApp (\x.x) ((\y.y)a))
 \end{lstlisting}
 %
 
+\subsection{Week 6}
+\begin{lstlisting}
+(\exp . \two . \three . exp two three)
+(\m.\n. m n)
+(\f.\x. f (f x))
+(\f.\x. f (f (f x)))
+=
+((\m.\n. m n) (\f.\x. f (f x)) (\f2.\x2. f2 (f2 (f2 x2))))
+=
+((\n. (\f.\x. f (f x)) n) (\f2.\x2. f2 (f2 (f2 x2))))
+=
+(((\f.\x. f (f x)) (\f2.\x2. f2 (f2 (f2 x2)))))
+=
+(((\x. (\f2.\x2. f2 (f2 (f2 x2))) ((\f2.\x2. f2 (f2 (f2 x2))) x))))
+=
+(((\x. (\x2. ((\f2.\x2. f2 (f2 (f2 x2))) x) (((\f2.\x2. f2 (f2 (f2 x2))) x) (((\f2.\x2. f2 (f2 (f2 x2))) x) x2))))))
+=
+(((\x. (\x2. ((\x2. x (x (x x2)))) (((\f2.\x2. f2 (f2 (f2 x2))) x) (((\f2.\x2. f2 (f2 (f2 x2))) x) x2))))))
+=
+(((\x. (\x2. (\x2. x (x (x x2))) (((\f2.\x2. f2 (f2 (f2 x2))) x) (((\f2.\x2. f2 (f2 (f2 x2))) x) x2))))))
+=
+(((\x. (\x2. (x (x (x (((\f2.\x2. f2 (f2 (f2 x2))) x) (((\f2.\x2. f2 (f2 (f2 x2))) x) x2)))))))))
+=
+(((\x. (\x2. (x (x (x (((\x2. x (x (x x2)))) (((\f2.\x2. f2 (f2 (f2 x2))) x) x2)))))))))
+=
+(((\x. (\x2. (x (x (x ((\x2. x (x (x x2))) (((\f2.\x2. f2 (f2 (f2 x2))) x) x2)))))))))
+=
+(((\x. (\x2. (x (x (x ((x (x (x (((\f2.\x2. f2 (f2 (f2 x2))) x) x2))))))))))))
+=
+(((\x. (\x2. (x (x (x ((x (x (x (((\x2. x (x (x x2))) x) x2))))))))))))
+=
+(((\x. (\x2. (x (x (x ((x (x (x (((x (x (x x)))) x2))))))))))))
+=
+((\x. (\x2. (x (x (x (x (x (x ((x (x (x x))) x2))))))))))
+\end{lstlisting}
+
 \section{Project}
 
 Placeholder
