Homework 8. Working on reworking visual/tree related assignments, trees for HW 7 temporarily removed, HW4 updated to take up less space.

--- a/report.tex
+++ b/report.tex
@@ -287,15 +287,7 @@ The word hanoi appears 31 times in the computation.
 \end{align*}
 
 \subsection{Week 4}
-\includegraphics {hw4no1}
-
-\includegraphics {hw4no2}
-
-\includegraphics {hw4no3}
-
-\includegraphics {hw4no4}
-
-\includegraphics {hw4no5}
+\includegraphics {hw4}
 
 \subsection{Week 5}
 
@@ -354,8 +346,19 @@ evalCBN (z) = line 8
 z
 \end{lstlisting}
 
-\includegraphics {hw7p1}
-\includegraphics {hw7p2}
+Placeholder [Re-add trees later]
+
+\subsection{Week 8}
+This ARS does not terminate because the rules ba -> ab and ab -> ba will loop with each other infinitely.
+
+\medskip\noindent
+The normal forms of this ARS are a and b because those two cannot be reduced any further than their current form.
+
+\medskip\noindent
+No, because adding unique normal forms would break the looping equivalency relations caused by the rules ba -> ab and ab -> ba.
+
+\medskip\noindent
+The existint normal forms of a and b reduce duplicates into into singular forms. The ARS as a whole is a reversing function that will reverse a given string while reducing its duplicates.
 
 \section{Project}
 
