Fixed Week 9 formatting

--- a/report.tex
+++ b/report.tex
@@ -368,13 +368,26 @@ The ruleset is nonterminating because the first half of the rules can be used to
 
 \medskip\noindent
 The invariants are:
+
+\medskip\noindent
 length
+
+\medskip\noindent
 number of a's
+
+\medskip\noindent
 number of b's
+
+\medskip\noindent
 number of c's
+
+\medskip\noindent
 number of a's = number of b's = number of c's
 
+\medskip\noindent
 number of a's + number of c's = number of b's
+
+\medskip\noindent
 I feel like there's more after this but I'm stumped.
 
 \section{Project}
